# PonyAgent

./: CLAUDE.md  ROADMAP.md
backend/: .env.example  .gitignore  config.py  logging_config.py  main.py  pyproject.toml
backend/agent/: core.py  memory.py  tools.py
backend/providers/: llm.py
backend/routers/: chat.py
backend/tests/: test_main.py  test_tools.py
docs/plans/: 2026-02-23-ch4-design.md  2026-02-23-ch4-plan.md  2026-02-23-mcp-startup-loading-design.md  2026-02-23-mcp-startup-loading.md  2026-02-23-ponyagent-design.md
frontend/: package-lock.json
frontend/src/: style.css
frontend/src/api/: chat.ts
frontend/src/components/: ChatWindow.vue
