[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.131.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-core>=1.2.14",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.2.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
